# dvc_pipeline

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: deploy-model.yml
data/source/: .gitignore  Housing.csv.dvc
metrics/: metrics.json
src/: evaluate.py  process.py  split_data.py  train.py
